--- a/src/App.css
+++ b/src/App.css
@@ -65,9 +65,64 @@ body {
     transform: rotate(360deg);
   }
 }
-
+@keyframes flip {
+  0% {
+    transform: scale(1);
+  }
+  10% {
+    transform: scale(1.1);
+  }
+  20% {
+    transform: scale(1.2);
+  }
+  30% {
+    transform: scale(1.3);
+  }
+  40% {
+    transform: scale(1.4);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  60% {
+    transform: scale(1.4);
+  }
+  70% {
+    transform: scale(1.3);
+  }
+  80% {
+    transform: scale(1.2);
+  }
+  90% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes flipHeads {
+  from {transform: rotateY(0) scale(1);}
+  10% {transform: rotateY(90deg) scale(1.1);}
+  20% {transform: rotateY(180deg) scale(1.2);}
+  30% {transform: rotateY(360deg) scale(1.3);}
+  40% {transform: rotateY(450deg) scale(1.4);}
+  50% {transform: rotateY(540deg) scale(1.5);}
+  60% {transform: rotateY(630deg) scale(1.4);}
+  70% {transform: rotateY(820deg) scale(1.3);}
+  80% {transform: rotateY(910deg) scale(1.2);}
+  90% {transform: rotateY(1000deg) scale(1.1);}
+  100% {transform: rotateY(1090deg) scale(1);}
+}
+.flip-animation {
+  animation: flipHeads 2s ease-in-out;
+  transform-style: preserve-3d;
+}
 .spin-blur {
-  animation: spin 1s linear infinite;
+  animation: flipHeads 3s ease-out;
+  /* animation: spin 1s linear infinite; */
+  /* animation: flip 0.5s linear; */
   filter: blur(4px);
   transition: filter 0.3s ease, transform 0.3s ease;
+  /* scale: 0.6; */
+  border-radius: 50%;
 }
